--- a/KrausxRGA/UI/wndBoxInformation.xaml
+++ b/KrausxRGA/UI/wndBoxInformation.xaml
@@ -1,7 +1,7 @@
 ﻿<Window  x:Class="KrausRGA.UI.wndBoxInformation"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Kraus GRA System" Height="1280" Width="800" Topmost="True"
+        Title="Kraus RGA System" Height="1280" Width="800" 
         Name="wndLogin" Loaded="wndLogin_Loaded" WindowState="Maximized" Icon="/KrausRGA;component/Images/RGAICO.ico"
          Closing="wndLogin_Closing">
 
