--- a/KrausxRGA/UI/wndPONumber.xaml
+++ b/KrausxRGA/UI/wndPONumber.xaml
@@ -31,7 +31,7 @@
                                             <TextBox x:Name="txtVendorName"  Canvas.Left="435" Canvas.Top="161" Width="321" Height="62" FontSize="15" TextWrapping="Wrap" AcceptsReturn="True"   IsEnabled="False"/>
 
                                             <Label x:Name="lblcRMAStatus" Content="RMA Status : " Style="{StaticResource lblConstant}" Canvas.Top="52" Width="150" Canvas.Left="28"/>
-                                            <ComboBox x:Name="cmbRMAStatus" Height="45" Width="202" Canvas.Left="10" Canvas.Top="85" Style="{StaticResource combo}" IsReadOnly="True"
+                                            <ComboBox x:Name="cmbRMAStatus" Height="45" Width="213" Canvas.Left="10" Canvas.Top="85" Style="{StaticResource combo}" IsReadOnly="True" IsEnabled="False"
 													ItemsSource="{Binding RAMStatus}" DisplayMemberPath="Status" SelectedValuePath="ID" SelectedIndex="0" SelectedValue="-1" Foreground="#FF55BFB6" BorderBrush="#FF292929">
                                                 <ComboBox.Background>
                                                     <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
@@ -45,7 +45,7 @@
                                             </ComboBox>
 
                                             <Label x:Name="lblcRMADecision" Content="Decision : " Style="{StaticResource lblConstant}" Canvas.Top="141" Width="152" Canvas.Left="26"/>
-                                            <ComboBox x:Name="cmbRMADecision" Height="45" Width="202" Canvas.Left="10" Canvas.Top="170" Style="{StaticResource combo}" IsEnabled="True"
+                                            <ComboBox x:Name="cmbRMADecision" Height="45" Width="213" Canvas.Left="10" Canvas.Top="170" Style="{StaticResource combo}" IsEnabled="False" 
 													ItemsSource="{Binding RAMStatus}" SelectedValuePath="ID" DisplayMemberPath="Status" SelectedIndex="0" SelectedValue="-1" Foreground="#FF55BFB6" BorderBrush="#FF292929" >
                                                 <ComboBox.Background>
                                                     <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
@@ -145,16 +145,16 @@
                                         </DataGrid.Resources>
 
                                         <DataGrid.Columns>
-                                            <DataGridTemplateColumn HeaderStyle="{StaticResource HeaderStyleKey}"   Header="Item" Width="82" >
+                                            <DataGridTemplateColumn HeaderStyle="{StaticResource HeaderStyleKey}"   Header="Item" Width="62" >
                                                 <DataGridTemplateColumn.CellTemplate>
                                                     <DataTemplate >
                                                         <Canvas x:Name="cvButtons" Background="White">
-                                                            <Button x:Name="btnRed" Width="80" Height="70" BorderBrush="{x:Null}" Foreground="{x:Null}" Click="btnRed_Click" Style="{StaticResource ImageButton}">
+                                                            <Button x:Name="btnRed" Width="60" Height="70" BorderBrush="{x:Null}" Foreground="{x:Null}" Click="btnRed_Click" Style="{StaticResource ImageButton}">
                                                                 <Button.Background>
                                                                     <ImageBrush Stretch="Fill" ImageSource="/KrausRGA;component/Images/Unchecked .png"/>
                                                                 </Button.Background>
                                                             </Button>
-                                                            <Button x:Name="btnGreen" Visibility="Hidden" Width="80" Height="70"  BorderBrush="{x:Null}" Foreground="{x:Null}" Style="{StaticResource ImageButton}"
+                                                            <Button x:Name="btnGreen" Visibility="Hidden" Width="60" Height="70"  BorderBrush="{x:Null}" Foreground="{x:Null}" Style="{StaticResource ImageButton}"
         														Click="btnGreen_Click" >
                                                                 <Button.Background>
                                                                     <ImageBrush Stretch="Fill" ImageSource="/KrausRGA;component/Images/Checked .png"/>
@@ -178,13 +178,13 @@
 
                                             <DataGridTemplateColumn HeaderStyle="{StaticResource HeaderStyleKey}" 
         										Header="Qty"
-        										Width="80">
+        										Width="50">
 
                                                 <DataGridTemplateColumn.CellTemplate>
                                                     <DataTemplate>
-                                                        <StackPanel x:Name="spQty1" Width="80">
-                                                            <TextBlock x:Name="tbQty" TextAlignment="Center" Width="80" Text="{Binding ReturnedQty}" FontSize="20" FontWeight="Bold"/>
-                                                            <StackPanel x:Name="spQty2" Orientation="Horizontal">
+                                                        <StackPanel x:Name="spQty1" Width="40">
+                                                            <TextBlock x:Name="tbQty" TextAlignment="Center" Width="40" Text="{Binding SKU_Qty_Seq}" FontSize="20" FontWeight="Bold"/>
+                                                            <!--<StackPanel x:Name="spQty2" Orientation="Horizontal">
                                                                 <Button x:Name="btnMinus" Content="-" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"
         															Width="40" Height="40" FontSize="12"
         															Foreground="White" Background="#FF464646" 
@@ -193,7 +193,7 @@
         															Width="40" Height="40" 
         															FontSize="12" Foreground="White" Background="#FF464646"
         															Click="btnPluse_Click" />
-                                                            </StackPanel>
+                                                            </StackPanel>-->
                                                         </StackPanel>
                                                     </DataTemplate>
                                                 </DataGridTemplateColumn.CellTemplate>
@@ -201,7 +201,7 @@
 
                                             <DataGridTemplateColumn HeaderStyle="{StaticResource HeaderStyleKey}"
         										Header="Images" 
-        										Width="200" >
+        										Width="150" >
                                                 <DataGridTemplateColumn.CellTemplate>
                                                     <DataTemplate >
                                                         <ScrollViewer x:Name="svScrollImages" Width="250" VerticalScrollBarVisibility="Disabled" HorizontalScrollBarVisibility="Auto" CanContentScroll="True" Height="70">
@@ -238,6 +238,31 @@
                                                         <Canvas>
                                                             <Image x:Name="imgBarCode" Canvas.Left="15" Width="255" Height="50" Stretch="Uniform"/>
                                                         </Canvas>
+                                                    </DataTemplate>
+                                                </DataGridTemplateColumn.CellTemplate>
+                                            </DataGridTemplateColumn>
+                                            <DataGridTemplateColumn HeaderStyle="{StaticResource HeaderStyleKey}" 
+        										Header=""
+        										Width="40">
+
+                                                <DataGridTemplateColumn.CellTemplate>
+                                                    <DataTemplate>
+                                                        <StackPanel x:Name="spDQyt" Width="40">
+                                                            <TextBlock x:Name="tbDQyt" TextAlignment="Center" Width="40" Text="{Binding SKU_Sequence}" FontSize="20" FontWeight="Bold"/>
+                                                        </StackPanel>
+                                                    </DataTemplate>
+                                                </DataGridTemplateColumn.CellTemplate>
+                                            </DataGridTemplateColumn>
+
+                                            <DataGridTemplateColumn HeaderStyle="{StaticResource HeaderStyleKey}" 
+        										Header="Status"
+        										Width="70">
+
+                                                <DataGridTemplateColumn.CellTemplate>
+                                                    <DataTemplate>
+                                                        <StackPanel x:Name="spskustatus" Width="60">
+                                                            <TextBlock x:Name="tbskustatus" TextAlignment="Center" Width="60" Text="{Binding SKU_Status}" FontSize="15" FontWeight="Bold"/>
+                                                        </StackPanel>
                                                     </DataTemplate>
                                                 </DataGridTemplateColumn.CellTemplate>
                                             </DataGridTemplateColumn>
@@ -346,30 +371,30 @@
                                         <Canvas Margin="-10,0,10,0" Name="CanvasConditions" IsEnabled="False">
                                             <Label Name="lblpoints" Height="39" Width="105" Canvas.Left="656" Canvas.Top="75"></Label>
 
-                                            <Canvas>
-                                                <Label Canvas.Left="229" Canvas.Top="20" Name="lblItemIsNew" Content="Item is New" Style="{StaticResource lblConstant}" Width="167" Height="46" FontSize="30" ></Label>
-                                                <RadioButton Content="Yes" Name="btnBoxNew" Canvas.Left="420" Canvas.Top="21" Height="45" Width="75" FontSize="30" Checked="btnBoxNew_Checked_1"></RadioButton>
-                                                <RadioButton Content="No" Name="btnBoxNotNew" Canvas.Left="520" Canvas.Top="20" Height="46" Width="104" FontSize="30" Checked="btnBoxNotNew_Checked_1"></RadioButton>
+                                            <Canvas  Height="54" Width="493" RenderTransformOrigin="2.093,1.173" Canvas.Left="227" Canvas.Top="12">
+                                                <Label Canvas.Left="2" Canvas.Top="5" Name="lblItemIsNew" Content="Item is New" Style="{StaticResource lblConstant}" Width="167" Height="46" FontSize="30" ></Label>
+                                                <RadioButton Content="Yes" Name="btnBoxNew" Canvas.Left="193" Canvas.Top="6" Height="45" Width="75" FontSize="30" Checked="btnBoxNew_Checked_1"></RadioButton>
+                                                <RadioButton Content="No" Name="btnBoxNotNew" Canvas.Left="293" Canvas.Top="5" Height="46" Width="104" FontSize="30" Checked="btnBoxNotNew_Checked_1" ></RadioButton>
                                             </Canvas>
                                             <Canvas>
                                                 <Label Canvas.Left="117" Canvas.Top="253" Name="lblDefectontea" Content="Defect in Transite" Style="{StaticResource lblConstant}" Width="284" Height="43" FontSize="30" ></Label>
                                                 <RadioButton Content="Yes" Name="btntransiteYes" Canvas.Left="418" Canvas.Top="252" Height="44" Width="84" FontSize="30" Checked="btntransiteYes_Checked_1" IsEnabled="False"></RadioButton>
-                                                <RadioButton Content="No" Canvas.Left="528" Name="btntransiteNo" Canvas.Top="252" Height="42" Width="79" FontSize="30" Checked="btntransiteNo_Checked" IsEnabled="False" ></RadioButton>
+                                                <RadioButton Content="No" Canvas.Left="524" Name="btntransiteNo" Canvas.Top="252" Height="42" Width="79" FontSize="30" Checked="btntransiteNo_Checked" IsEnabled="False" ></RadioButton>
                                             </Canvas>
                                             <Canvas>
                                                 <Label Canvas.Left="158" Name="lblInstalled" Canvas.Top="70" Content="Installed" Style="{StaticResource lblConstant}" Width="241" Height="47" FontSize="30" ></Label>
                                                 <RadioButton Content="Yes" Canvas.Left="418" Canvas.Top="76" Name="btnInstalledYes" Height="45" Width="84" FontSize="30" Checked="btnInstalledYes_Checked_1"></RadioButton>
-                                                <RadioButton Content="No" Canvas.Left="523" Canvas.Top="71" Name="btnInstalledNo" Height="44" Width="84" FontSize="30" Checked="btnInstalledNo_Checked_1" ></RadioButton>
+                                                <RadioButton Content="No" Canvas.Left="523" Canvas.Top="77" Name="btnInstalledNo" Height="44" Width="84" FontSize="30" Checked="btnInstalledNo_Checked_1" ></RadioButton>
                                             </Canvas>
                                             <Canvas>
                                                 <Label Canvas.Left="6" Name="lblStatus" Canvas.Top="132" Content="Chip/Bended/Scratch/Broken" Style="{StaticResource lblConstant}" Width="396" Height="46" FontSize="30" ></Label>
-                                                <RadioButton Content="Yes"  Canvas.Left="423" Canvas.Top="133" Name="btnStatusYes" Height="49" Width="84" FontSize="30" Checked="btnStatusYes_Checked" ></RadioButton>
-                                                <RadioButton Content="No"  Canvas.Left="523" Canvas.Top="133" Name="btnStatusNo" Height="47" Width="84" FontSize="30" Checked="btnStatusNo_Checked"></RadioButton>
+                                                <RadioButton Content="Yes"  Canvas.Left="419" Canvas.Top="133" Name="btnStatusYes" Height="49" Width="84" FontSize="30" Checked="btnStatusYes_Checked" ></RadioButton>
+                                                <RadioButton Content="No"  Canvas.Left="523" Canvas.Top="135" Name="btnStatusNo" Height="47" Width="84" FontSize="30" Checked="btnStatusNo_Checked"></RadioButton>
                                             </Canvas>
                                             <Canvas>
                                                 <Label Canvas.Left="34" Canvas.Top="187" Name="lblManufacturer" Content="Manufacturer Defective" Style="{StaticResource lblConstant}" Width="372" Height="48" FontSize="30" ></Label>
                                                 <RadioButton Content="Yes" Canvas.Left="420" IsEnabled="False" Canvas.Top="191" Name="btnManufacturerYes" Height="46" Width="84" FontSize="30" Checked="btnManufacturerYes_Checked"></RadioButton>
-                                                <RadioButton Content="No" Canvas.Left="523" Canvas.Top="187" IsEnabled="False" Name="btnManufacturerNo" Height="48" Width="98" FontSize="30" Checked="btnManufacturerNo_Checked"></RadioButton>
+                                                <RadioButton Content="No" Canvas.Left="523" Canvas.Top="191" IsEnabled="False" Name="btnManufacturerNo" Height="48" Width="98" FontSize="30" Checked="btnManufacturerNo_Checked"></RadioButton>
                                             </Canvas>
                                             <Button Content="Done" Name="btnAdd" Canvas.Left="642" Canvas.Top="261" Width="119" Height="44" FontSize="20" Click="btnAdd_Click" ></Button>
                                         </Canvas>
@@ -576,7 +601,7 @@
                     </Border>
                 </Canvas>
             </Border>
-            <Button Content="Show Barcode" FontSize="20"  HorizontalAlignment="Left" Margin="656,467,0,0" VerticalAlignment="Top" Width="134" Height="38" Name="btnshow" Click="Button_Click_1"/>
+            <Button Content="Show Barcode" FontSize="20"  HorizontalAlignment="Left" Margin="656,467,0,0" VerticalAlignment="Top" Width="134" Height="38" Name="btnshow" Click="Button_Click_1" />
         </Grid>
     </Viewbox>
 </Window>
