--- a/KrausxRGA/UI/wndPONumber.xaml
+++ b/KrausxRGA/UI/wndPONumber.xaml
@@ -277,7 +277,11 @@
         										Header=""  
         										Width="" 
         										IsReadOnly="True" />
-
+                                            <DataGridTextColumn HeaderStyle="{StaticResource HeaderStyleKey}" 
+        										Binding="{Binding LineType}" 
+        										Header=""  
+        										Width="" 
+        										IsReadOnly="True" />
                                         </DataGrid.Columns>
                                         <DataGrid.RowValidationErrorTemplate>
                                             <ControlTemplate>
